# lab2

./: .gitignore  CMakeLists.txt  main.cpp  timeit
